--- a/src/BUILD
+++ b/src/BUILD
@@ -2,6 +2,7 @@ cc_binary(
   name = "vicuna",
   srcs = ["vicuna.cpp"],
   deps = [
-    "//lib:Alpaca"
+    "//lib:Alpaca",
+    "//lib:Trade",
   ],
 )
