--- a/.bazelrc
+++ b/.bazelrc
@@ -1,4 +1,5 @@
 build --cxxopt='-std=c++17'
+build --repo_env=CC=clang
 build --action_env=APCA_API_KEY_ID
 build --action_env=APCA_API_SECRET_KEY
 build --action_env=APCA_API_BASE_URL
